cpp from beginning

--- a/cpp-from-beginning/00-序言.md
+++ b/cpp-from-beginning/00-序言.md
@@ -1,8 +1,53 @@
 # `0x00`序言
 
-C++是我一直以来非常喜欢的编程语言。回头看看，已经学习使用C++超过五个年头了，我深知它的复杂。因此，我计划为中文C++社区贡献一点棉薄之力，出一个面向初学者的教程。
+C++是我一直以来非常喜欢的编程语言。回头看看，已经学习使用C++超过五个年头了，我深知它的复杂。因此，我计划为中文C++社区贡献一点棉薄之力，出一个面向初学者的教程。与其说是教程，不如说是我个人学习C++一点经验。如有疏漏错误指出，欢迎各位指正。
 
+## 一、C++的历史
 
+![origin of cpp](/assets/origin-of-cpp.png)
 
-## 本系列教程的愿景
+C++的诞生可以追溯到1979年。C++之父**比雅尼·斯特劳斯特鲁普**（Bjarne Stroustrup）彼时正在贝尔实验室工作，致力于研究Unix内核的分布式计算问题。当时的C语言凭借其通用、高效、可移植的特点已经逐渐流行开来，但它缺少支持大型程序开发的高级特性。而Simula正好相反，类、继承、虚过程等特性正是开发大型程序的利器，但它的执行速度却太慢了。于是比雅尼将Simula的一些高级概念融入C语言，发明了C with Classes。当然，除了Simula和C之外，C++还从其他语言吸收了很多灵感，如ALGOL 68、Ada、CLU以及ML等语言。1983年，C with Classes改名C++，并沿用至今。
 
+经过十年的发展，C++凭借其兼顾抽象与性能的特点逐渐流行开来，许多商业公司都推出了自家的C++编译器。问题也随之而来，很多公司都给自家编译器添加了很多独有的语言特性，C++的标准化问题迫在眉睫。
+
+于是在1990至1991年间，ISO C++标准委员会逐步成立，并开始推进C++的标准化工作。直到1998年，第一个ISO C++标准才正式出版——*ISO/IEC 14882:1998*。
+
+2003年，委员会发布了C++的第二版标准，但C++03主要聚焦在修复缺陷而非引入新特性，因此这个版本的存在感并不高。
+
+2011年，C++11的出版标志者现代C++的诞生，这是C++史上一个伟大的里程碑。从此之后，C++保持着每三年发布一个新版本的更新节奏并持续至今。
+
+## 二、本系列教程的愿景
+
+- 打造现代C++教程，以C++20/23为基础。
+
+- 紧扣标准，专注于语言本身。
+
+- 循序渐进，由浅到深。
+
+## 三、教程使用的编程环境
+
+主要使用在线编译器网站[godbolt](https://godbolt.org/){target="_blank"}。这个网站可以在线编译、运行C++代码，最重要的是可以切换各种编译器，查看它们的行为差异。使用在线编译器也能保证读者和教程使用相同的编译环境。除了C++，godbolt也可以在线运行其他很多语言，例如C、Fortran、Java、Python、Rust等等。
+
+由于godbolt无法在线运行MSVC编译器生成的程序，因此偶尔也会使用Visual Studio来运行示例代码。
+
+教程中的示例代码会尽量避免各种实现上的差异，因此任何你喜欢的编程环境都是可行的，只要确保你的编译器能支持较新的标准即可。
+
+目前流行的C++编译器有GNU计划的GCC、基于llvm的clang以及微软家的MSVC，俗称C++编译器御三家。此外还有英特尔针对自家CPU推出的icx，英伟达针对自家GPU推出的nvcc等。
+
+## 四、推荐的书籍与资源
+
+- 《C++程序设计 原理与实践》，*Programming Principles and Practice Using C++*，C++之父亲自编写的C++入门书。
+
+- 《C++ Primer》，经典的入门书，缺点是只讲到C++11的部分。
+
+- [cppreference](https://zh.cppreference.com/){target="_blank"}，在线文档，关于C++的一切都能在上面找到答案。
+
+- [godbolt](https://godbolt.org){target="_blank"}，强大的在线编译器平台。
+
+- [cppinsights](https://cppinsight.io/){target="_blank"}，C++去糖器。
+
+- [hackingcpp](https://hackingcpp.com/){target="_blank"}，图文并茂的C++学习资源。
+
+- [ISO/IEC 14882 最新草案](https://eel.is/c++draft/){target="_blank"}，随时更新的C++最新草案。
+
+- [CSDIY](https://csdiy.wiki/){target="_blank"}，泛计算机专业自学指南。
